bin middleman things

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,11 +3,5 @@ title: Yees ✨
 ---
 
 <h1>
-  ✨
+  Hi Charlotte ✨
 </h1>
-
-<%= link_to(
-  "Read Documentation",
-  "https://middlemanapp.com/basics/templating_language/",
-  target: "_blank"
-) %>
