--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,7 +2,25 @@
 title: ✨✨
 ---
 
-<h1>
- ✨
-</h1>
-<%= tag :img, :src => "/images/otts.gif" %>
+<div class="container mx-auto p-8">
+  <div class="flex">
+    <div class="flex-1 m-8 rounded overflow-hidden shadow-lg">
+      <%= tag :img, :src => "/images/otts.gif" %>
+      <div class="px-6 py-4">
+        <div class="font-bold text-xl mb-2">Otts</div>
+        <p class="text-grey-darker text-base">
+          ✨✨
+        </p>
+      </div>
+    </div>
+    <div class="flex-1 m-8 rounded overflow-hidden shadow-lg">
+      <%= tag :img, :src => "/images/otts.gif" %>
+      <div class="px-6 py-4">
+        <div class="font-bold text-xl mb-2">Otts</div>
+        <p class="text-grey-darker text-base">
+          ✨✨
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
