--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -6,9 +6,9 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Use the title from a page's frontmatter if it has one -->
-    <title><%= current_page.data.title || "Middleman" %></title>
-    <%= stylesheet_link_tag "site" %>
-    <%= javascript_include_tag "site" %>
+    <title><%= current_page.data.title %></title>
+    <%= stylesheet_link_tag "styles" %>
+    <%= javascript_include_tag "application" %>
   </head>
   <body>
     <%= yield %>
