--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -14,9 +14,9 @@ title: ✨✨
       </div>
     </div>
     <div class="flex-1 m-8 rounded overflow-hidden shadow-lg">
-      <%= tag :img, :src => "/images/otts.gif" %>
+      <%= tag :img, :src => "/images/seal.gif" %>
       <div class="px-6 py-4">
-        <div class="font-bold text-xl mb-2">Otts</div>
+        <div class="font-bold text-xl mb-2">Sea Dog</div>
         <p class="text-grey-darker text-base">
           ✨✨
         </p>
